tests/baselines/reference/indexSignatureWithInitializer.errors.txt
==== tests/cases/compiler/indexSignatureWithInitializer.ts (4 errors) ====
    interface I {
        [x = '']: string;
         ~~~~~~
!!! indexSignatureWithInitializer.ts(2,6): error TS1020: Index signature parameter cannot have an initializer.
         ~~~~~~
!!! indexSignatureWithInitializer.ts(2,6): error TS2174: A parameter initializer is only allowed in a function or constructor implementation.
    }
    
    class C {
        [x = 0]: string
         ~~~~~
!!! indexSignatureWithInitializer.ts(6,6): error TS1020: Index signature parameter cannot have an initializer.
         ~~~~~
!!! indexSignatureWithInitializer.ts(6,6): error TS2174: A parameter initializer is only allowed in a function or constructor implementation.
    }